# space_junk_simulator

./: 1 - Debug processing.ipynb  1_Debug_processing.ipynb  CMakeLists.txt  Debug_processing.ipynb  README.md  objects.csv  sandbox.ipynb  setup.py
.ipynb_checkpoints/: sandbox-checkpoint.ipynb
docs/: runge_kutta_4.md
examples/: 1_Stage_1_Trajectories_with_simple_gravity.ipynb  2_Stage_2_Trajectories_with_collisions.ipynb  3_Stage_3_Trajectories_with_ heterogeneous forces.ipynb  Simualtion.ipynb  cfg.txt  sample.ipynb
examples/.ipynb_checkpoints/: 1 - Debug processing-checkpoint.ipynb
lib/: json.hpp
notebooks/: 0_Stage_0_Simple_simulation_example.ipynb  1_Stage_1_Trajectories_with_simple_gravity.ipynb  3_Stage_3_Trajectories_with_ heterogeneous forces.ipynb  Simualtion.ipynb  sandbox.ipynb
samples/: solver_samples.ipynb
source/: cpu_solver.cpp  cpu_solver.h  cpu_solver_main.cpp  gpu_solver.cu  gpu_solver.h  json.hpp  model.cpp  model.h  test.cpp  trajectories.txt
src/: cpu_solver_main.cpp  gpu_main.cu  model.cpp  model.cu  model.cuh  model.h  readme.md  utils.py
src/cpu/: cpu_solver.cpp  cpu_solver.h
src/gpu/: gpu_solver.cu  gpu_solver.cuh  gpu_solver.h  model.cu  model.cuh
src/python_package/: __init__.py  py_wrapper_cpu.cpp  py_wrapper_gpu.cpp  python_wrapper.cpp  space_junk_simulator.py
test/: cfg.txt  test.cpp
utils/: generate.py
